--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^5.2.0",
+    "express-validator": "^6.7.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^17.3.0",
+    "joi-password-complexity": "^5.0.2",
     "mongoose": "^5.10.16",
     "morgan": "~1.9.1",
     "nconf": "^0.11.0"
