--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "express-validator": "^6.7.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -17,6 +19,8 @@
     "joi-password-complexity": "^5.0.2",
     "mongoose": "^5.10.16",
     "morgan": "~1.9.1",
-    "nconf": "^0.11.0"
+    "nconf": "^0.11.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
