--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^6.7.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "javascript-time-ago": "^2.3.3",
     "joi": "^17.3.0",
     "joi-password-complexity": "^5.0.2",
     "mongoose": "^5.10.16",
